# controller/vulnerabilityDbController/create.go
@@ -1,0 +1,43 @@
+package vulnerabilityDbController
+
+import (
+	"DIDTrustCore/common"
+	"DIDTrustCore/model/requestBase"
+	"DIDTrustCore/util/dataBase/vulnerabilityDb"
+	"encoding/json"
+	"github.com/gin-gonic/gin"
+)
+
+// @Summary 创建个人漏洞
+// @Description 创建个人漏洞
+// @Tags 漏洞库管理
+// @Accept json
+// @Produce json
+// @Param Authorization	header		string	true	"jwt"
+// @Param body body VulnerabilityData true "创建参数"
+// @Success 200 {object} model.BlobsCustomer "创建漏洞结果"
+// @Router /api/v1/vulnerability/create [post]
+func create(c *gin.Context) {
+	var req VulnerabilityData
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.ParameterError, "无效的请求参数:"+err.Error(), gin.H{}))
+		return
+	}
+	user, err := common.GetUserFromContext(c)
+	if err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.UploadFailed, "获取用户id失败:"+err.Error(), gin.H{}))
+		return
+	}
+	jsonBytes, err := json.Marshal(req)
+	if err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.ParameterError, "结构序列号失败:"+err.Error(), gin.H{}))
+		return
+	}
+	record, err := vulnerabilityDb.Svc.CreateRecord(user.ID, string(jsonBytes))
+	if err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.NotFoundReport, "创建失败:"+err.Error(), gin.H{}))
+		return
+	}
+
+	c.JSON(requestBase.ResponseBodySuccess(record))
+}
