# controller/vulnerabilityDbController/model.go
@@ -1,0 +1,33 @@
+package vulnerabilityDbController
+
+type QueryRequest struct {
+	Page int `json:"page" binding:"required"`
+	Size int `json:"size" binding:"required"`
+}
+
+type VulnerabilityData struct {
+	ID          string      `json:"id" binding:"required"` // 必填字段
+	Assigner    []string    `json:"assigner" binding:"required"`
+	Description string      `json:"description" binding:"required"`
+	Refs        []Reference `json:"-"` // 忽略的字段
+	Severities  []Severity  `json:"severities" binding:"required"`
+}
+
+// Refs字段的嵌套结构体
+type Reference struct {
+	URL string `json:"url"`
+}
+
+// Severities字段的嵌套结构体
+type Severity struct {
+	Scheme string        `json:"scheme"`
+	Value  SeverityValue `json:"value"` // 嵌套对象
+	Source string        `json:"source"`
+	Rank   int           `json:"rank"`
+}
+
+// Severity.Value字段的嵌套结构体
+type SeverityValue struct {
+	Vector  string `json:"vector"`
+	Version string `json:"version"`
+}
