# controller/vulnerabilityDbController/query.go
@@ -1,0 +1,44 @@
+package vulnerabilityDbController
+
+import (
+	"DIDTrustCore/model/requestBase"
+	"DIDTrustCore/util/dataBase/vulnerabilityDb"
+	"encoding/json"
+	"github.com/gin-gonic/gin"
+)
+
+// @Summary 查询漏洞列表
+// @Description 查询公开的漏洞
+// @Tags 漏洞库管理
+// @Accept json
+// @Produce json
+// @Param Authorization	header		string	true	"jwt"
+// @Param body body QueryRequest true "查询参数"
+// @Success 200 {object} VulnerabilityData "漏洞列表"
+// @Router /api/v1/vulnerability/query [post]
+func query(c *gin.Context) {
+	var req QueryRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.ParameterError, "无效的请求参数:"+err.Error(), gin.H{}))
+		return
+	}
+	records, err := vulnerabilityDb.Svc.ListVulnerability(req.Page, req.Size)
+	if err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.NotFoundReport, "查询失败:"+err.Error(), gin.H{}))
+		return
+	}
+	var data_arr []VulnerabilityData
+	for _, record := range records {
+		var data VulnerabilityData
+
+		// 解析JSON到结构体
+		err := json.Unmarshal([]byte(record.Value), &data)
+		if err != nil {
+			c.JSON(requestBase.ResponseBody(requestBase.NotFoundReport, "解析结构失败:"+err.Error(), gin.H{}))
+			return
+		}
+		data_arr = append(data_arr, data)
+	}
+
+	c.JSON(requestBase.ResponseBodySuccess(data_arr))
+}
