# controller/vulnerabilityDbController/queryByUser.go
@@ -1,0 +1,51 @@
+package vulnerabilityDbController
+
+import (
+	"DIDTrustCore/common"
+	"DIDTrustCore/model/requestBase"
+	"DIDTrustCore/util/dataBase/vulnerabilityDb"
+	"encoding/json"
+	"github.com/gin-gonic/gin"
+)
+
+// @Summary 查询用户创建的漏洞
+// @Description 查询用户创建的漏洞
+// @Tags 漏洞库管理
+// @Accept json
+// @Produce json
+// @Param Authorization	header		string	true	"jwt"
+// @Param body body QueryRequest true "查询参数"
+// @Success 200 {object} VulnerabilityData "漏洞列表"
+// @Router /api/v1/vulnerability/queryByUser [post]
+func queryByUser(c *gin.Context) {
+	var req QueryRequest
+	if err := c.ShouldBindJSON(&req); err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.ParameterError, "无效的请求参数:"+err.Error(), gin.H{}))
+		return
+	}
+	user, err := common.GetUserFromContext(c)
+	if err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.UploadFailed, "获取用户id失败:"+err.Error(), gin.H{}))
+		return
+	}
+	records, err := vulnerabilityDb.Svc.ListVulnerabilityByUser(user.ID, req.Page, req.Size)
+	if err != nil {
+		c.JSON(requestBase.ResponseBody(requestBase.NotFoundReport, "查询失败:"+err.Error(), gin.H{}))
+		return
+	}
+
+	var data_arr []VulnerabilityData
+	for _, record := range records {
+		var data VulnerabilityData
+
+		// 解析JSON到结构体
+		err := json.Unmarshal([]byte(record.Value), &data)
+		if err != nil {
+			c.JSON(requestBase.ResponseBody(requestBase.NotFoundReport, "解析结构失败:"+err.Error(), gin.H{}))
+			return
+		}
+		data_arr = append(data_arr, data)
+	}
+
+	c.JSON(requestBase.ResponseBodySuccess(data_arr))
+}
