# controller/vulnerabilityDbController/vdController.go
@@ -1,0 +1,17 @@
+package vulnerabilityDbController
+
+import (
+	"DIDTrustCore/util"
+	"github.com/gin-gonic/gin"
+)
+
+func Routers(e *gin.Engine) {
+
+	group := e.Group("/api/v1/vulnerability")
+	group.Use(util.AuthMiddleware())
+	{
+		group.POST("/query", query)
+		group.POST("/queryByUser", queryByUser)
+		group.POST("/create", create)
+	}
+}
