# controller/vulnerabilityScanningController/Model.go
@@ -1,6 +1,6 @@
 package vulnerabilityScanningController
 
 type ScanRequest struct {
-	DidID       string `json:"didid"`
-	SbomFileUrl string `json:"sbom_file_url"`
+	DidID       string `json:"didid" binding:"required"`
+	SbomFileUrl string `json:"sbom_file_url" binding:"required"`
 }
