# model/VulnerabilityRecord.go
@@ -1,0 +1,13 @@
+package model
+
+type Blobs struct {
+	ID    int    `gorm:"column:id;primaryKey;autoIncrement"`
+	Value string `gorm:"column:value;type:text;not null"`
+}
+
+type BlobsCustomer struct {
+	UserID    uint   `gorm:"column:user_id;"`
+	Value     string `gorm:"column:value;type:text;not null"`
+	CreatedAt int64  `gorm:"type:bigint;index:idx_created;comment:创建时间" json:"created_at"`
+	UpdatedAt int64  `gorm:"type:bigint;index:idx_updated;comment:更新时间" json:"updated_at"`
+}
